--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -40,7 +40,7 @@
 
   --fw-700: '700';
 
-  --adaptw-tableoption: calc(100% - 1.4rem);
+  --adaptw-tableoption: calc(100% - 6.2rem);
 
   --minus-15rem: calc(100% - 15rem);
   --minus-7rem: calc(100% - 7.8rem);
@@ -48,7 +48,7 @@
 }
 
 .cdw-tableoption{
-  width: var(--adaptw-tableoption);
+  width: var(--adaptw-tableoption) !important;
 }
 
 .alert-header {
