[updated productinventory adding of inventory]-[script and UI]

--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -25,6 +25,10 @@
                                 <label class="form-label">Contact Info</label>
                                 <input id="contactinfomodal" name="contactinfomodal" type="text" class="form-control" placeholder="Enter New Contact info" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Full Name</label>
+                                <input id="fullnamemodal" name="fullnamemodal" type="text" class="form-control" placeholder="Enter Full Name" aria-label="fullname" aria-describedby="basic-addon1">        
+                            </div>
                         </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
