--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="toggle-view">
-        <div class="row mb-1">
+        <div class="row mb-2">
             <div class="col-12">
                 <div class="card">
                     <div class="card-header header-bg">
@@ -11,50 +11,55 @@
                         </div>
                     </div>
                     <div class="card-body extend">
-                        <div class="row">
-                            <div class="col">
-                                <div class="table-responsive scrollable-table-container-sm table-size-fixed">
-                                    <table class="table table-bordered custom-mobile-table" id="products-datatable"
-                                        width="100%" cellspacing="10">
-                                        <thead class="table-header">
-                                            <tr>
-                                                <th class="col-2">Product Name</th>
-                                                <th class="col-1">Product ID</th>
-                                                <th class="col-1">Branch ID</th>
-                                                <th class="col-1">Quantity</th>
-                                                <th class="col-1">Action</th>
-                                            </tr>
-                                        </thead>
-                                        
-                                        <tbody>
-                                            <tr>
-                                                <td data-label="Material Name" class="custom-mobile-align">
-                                                    <select class="form-control text-center" name="productlists"
-                                                        id="productlists">
-                                                        <option value="">Select Product</option>
-                                                    </select>
-                                                </td>
-                                                <td data-label="Product ID" class="custom-mobile-align product-id productid"></td>
-                                                <td data-label="Branch ID" class="custom-mobile-align branch-id branchid">
-                                                    <% if (accesstype === "Owner") { %>
-                                                        <select class="form-control text-center" name="branchlist" id="branchlist" disabled>
-                                                            <option value="">Select Branch</option>
-                                                        </select>
-                                                    <% } %>
-                                                </td>
-                                                <td data-label="Quantity" class="custom-mobile-align">
-                                                    <div class="row justify-content-center">
-                                                        <input id="quantity" name="quantity" type="number" class="form-control w-50" placeholder="0.00" value="" maxlength="8">
-                                                    </div>                                                    
-                                                </td>
-                                                <td data-label="Action" class="custom-mobile-align" id="actionBtn"></td>
-                                            </tr>
-                                        </tbody>
-                                        <tfoot>
-                                        </tfoot>
-                                    </table>
-                                </div>
-                            </div>
+                        <div class="table-responsive table-size-package">
+                            <table class="table custom-mobile-table" id="product-datatable"
+                                width="100%" cellspacing="10">
+                                <thead class="table-header">
+                                    <tr>
+                                        <th class="col-3">Product Name</th>
+                                        <th class="col-2">Product ID</th>
+                                        <th class="col-3">Branch Name</th>
+                                        <th class="col-2">Branch ID</th>
+                                        <th class="col-2">Quantity</th>
+                                        <th class="col-1"></th>
+                                    </tr> 
+                                </thead>
+                                
+                                <tbody>
+                                    <tr>
+                                        <td data-label="Product Name" class="custom-mobile-align">
+                                            <div class="col">
+                                                <div class="input-group">
+                                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select product" name="product"
+                                                        id="product" />
+                                                    <input autocomplete="off" type="hidden" id="productID" name="productID" />
+                                                </div>
+                                                <div class="custom-dropdown cdw-tableoption" id="productDropdown"></div>
+                                            </div>
+                                        </td>
+                                        <td data-label="product ID" class="custom-mobile-align product-id productid"></td>
+                                        <td data-label="Branch ID" class="custom-mobile-align">
+                                            <div class="col">
+                                                <div class="input-group">
+                                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select branch" name="branch"
+                                                        id="branch" disabled/>
+                                                    <input autocomplete="off" type="hidden" id="branchID" name="branchID" />
+                                                </div>
+                                                <div class="custom-dropdown cdw-tableoption" id="branchDropdown"></div>
+                                            </div>
+                                        </td>
+                                        <td data-label="Branch ID" class="custom-mobile-align branch-id branchid"></td>
+                                        <td data-label="Quantity" class="custom-mobile-align">
+                                            <div class="row justify-content-center">
+                                                <input id="quantity" name="quantity" type="number" class="form-control" placeholder="0.00" value="" maxlength="8">
+                                            </div>                                                    
+                                        </td>
+                                        <td data-label="Action" class="custom-mobile-align" id="actionBtn"></td>
+                                    </tr>
+                                </tbody>
+                                <tfoot>
+                                </tfoot>
+                            </table>
                         </div>
     
                         <div class="row justify-content-end mt-1">
@@ -66,6 +71,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 
     <div class="card shadow mb-4 table-size">
